Change class name for existing tweet content to tweet-content from tweet-text (which was used as an ID elsewhere). Add overflow-wrap rule to tweet-content to prevent overflow of <p> section with long texts in small screens

--- a/public/styles/tweets-list.css
+++ b/public/styles/tweets-list.css
@@ -27,9 +27,10 @@
   width: 50px;
 }
 
-.tweet-text {
+.tweet-content {
   margin: 1em 0.5em;
   width: 95%;
+  overflow-wrap: break-word;
   
 }
 .tweet > footer {
